Jamal-maven-extension version back to 3.9.8 Maven and now works source buddy back to 2.5.1 release