@@ -30,7 +30,7 @@
                 <configuration>
                     <argLine>
                 --add-opens jamal.asciidoc/javax0.jamal.asciidoc=ALL-UNNAMED
-    
+                -XX:+EnableDynamicAgentLoading
             </argLine>
                 </configuration>
             </plugin>
