@@ -33,6 +33,7 @@
                 --add-opens jamal.engine/javax0.jamal=ALL-UNNAMED
         --add-opens jamal.engine/javax0.jamal.engine=ALL-UNNAMED
         --add-opens jamal.engine/javax0.jamal.engine.util=ALL-UNNAMED
+                -XX:+EnableDynamicAgentLoading
             </argLine>
                 </configuration>
             </plugin>
