@@ -37,6 +37,7 @@
                            --add-reads jamal.testsupport=jamal.core
                            --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
                            --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
+                -XX:+EnableDynamicAgentLoading
             </argLine>
                 </configuration>
             </plugin>
